Implement UI for the resources (#8)
* Added rosource navigation button

* fixed a panic in list resource grpc endpoint

* Implement baisc resource list table

* Added total result to the paging metadata and added it to the list response

* Fixed the code for newly updated proto definition

* feat(resource): implemented paging

* feat(resource): created view/edit/create resource component and added route

* fix: temporarily pausing the frontend until backend completes

---------
