# internal/handler/grpc/resource.go
@@ -85,7 +85,12 @@ func (r *Resource) DeleteResource(ctx context.Context, request *abac.DeleteResou
 }
 
 func (r *Resource) ListResource(ctx context.Context, request *abac.ListResourceRequest) (*abac.ListResourceResponse, error) {
-	resources, err := r.resourceService.List(int(request.PagingMetadata.PageNumber), int(request.PagingMetadata.PageSize))
+	pageNumber, pageSize := 1, 10
+	if request != nil && request.PagingMetadata != nil {
+		pageNumber = int(request.PagingMetadata.GetPageNumber())
+		pageSize = int(request.PagingMetadata.GetPageSize())
+	}
+	resources, total, err := r.resourceService.List(pageNumber, pageSize)
 	if err != nil {
 		var apiError util.ApiError
 		if errors.As(err, &apiError) {
@@ -93,5 +98,5 @@ func (r *Resource) ListResource(ctx context.Context, request *abac.ListResourceR
 		}
 		return nil, status.Errorf(codes.Internal, "Internal server error: %v", err)
 	}
-	return adapter.ModelToListResourceResponse(resources), nil
+	return adapter.ModelToListResourceResponse(resources, total), nil
 }
